# nlp

./: README.md  REFACTOR_SUMMARY.md  REFACTOR_SUMMARY_NEW.md  demo_comparison.py  package-lock.json  pyproject.toml  requirements.txt  run_examples.py  test_nlp_core.py  test_text_analysis.py
.kiro/settings/: mcp.json
.trunk/: trunk.yaml
src/mcpserver/: __main__.py  deployment.py  nlp_core.py
