[project]
name = "nlp"
version = "0.1.0"
description = "MCP Server for sentiment analysis, keyword extraction, and entity extraction."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "fastapi-mcp>=0.3.7",
    "mcp[cli]>=1.12.0",
    "nltk>=3.9.1",
    "pip>=25.1.1",
    "requests>=2.32.4",
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
mcp-server = "mcpserver:__main__.main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

